--- a/taxes.html
+++ b/taxes.html
@@ -22,9 +22,12 @@
                     <li><a href="clients.html"><i class="fas fa-handshake"></i> <span>Clients Management</span></a></li>
                     <li><a href="vendors.html"><i class="fas fa-truck"></i> <span>Vendors Management</span></a></li>
                     <li><a href="payments-invoices.html"><i class="fas fa-file-invoice"></i> <span>Payments & Invoices</span></a></li>
+                    <li><a href="payroll.html"><i class="fas fa-money-check-alt"></i> <span>Payroll</span></a></li>
                     <li><a href="pensions.html"><i class="fas fa-chart-line"></i> <span>Pension Contributions</span></a></li>
                     <li class="active"><a href="taxes.html"><i class="fas fa-calculator"></i> <span>Tax Management</span></a></li>
                     <li><a href="benefits.html"><i class="fas fa-heartbeat"></i> <span>Medical & Insurance</span></a></li>
+                    <li><a href="compliance.html"><i class="fas fa-clipboard-check"></i> <span>Compliance</span></a></li>
+                    <li><a href="reports.html"><i class="fas fa-chart-bar"></i> <span>Reports & Analytics</span></a></li>
                     <li><a href="settings.html"><i class="fas fa-cogs"></i> <span>Settings</span></a></li>
                 </ul>
             </nav>
@@ -58,39 +61,41 @@
                     </div>
 
                     <div class="card">
-                        <table class="data-table">
-                            <thead>
-                                <tr>
-                                    <th>Employee Name</th>
-                                    <th>Tax Amount</th>
-                                    <th>Deduction Date</th>
-                                    <th>Pay Period</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>CHIGBU LIGHT UDOCHUKWU</td>
-                                    <td>₦5,000</td>
-                                    <td>May 31, 2025</td>
-                                    <td>May 2025</td>
-                                    <td>
-                                        <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
-                                        <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>OGUEGBU OKWUCHUKWU PATRICI</td>
-                                    <td>₦5,000</td>
-                                    <td>May 31, 2025</td>
-                                    <td>May 2025</td>
-                                    <td>
-                                        <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
-                                        <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
-                                    </td>
-                                </tr>
+                        <div class="table-responsive">
+                            <table class="data-table">
+                                <thead>
+                                    <tr>
+                                        <th>Employee Name</th>
+                                        <th>Tax Amount</th>
+                                        <th>Deduction Date</th>
+                                        <th>Pay Period</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>CHIGBU LIGHT UDOCHUKWU</td>
+                                        <td>₦5,000</td>
+                                        <td>May 31, 2025</td>
+                                        <td>May 2025</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                            <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>OGUEGBU OKWUCHUKWU PATRICI</td>
+                                        <td>₦5,000</td>
+                                        <td>May 31, 2025</td>
+                                        <td>May 2025</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                            <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
+                                        </td>
+                                    </tr>
                                 </tbody>
-                        </table>
+                            </table>
+                        </div>
                     </div>
                 </div>
 
@@ -103,30 +108,32 @@
                         <button class="btn btn-primary"><i class="fas fa-plus-circle"></i> Record New Payment</button>
                     </div>
                     <div class="card">
-                        <table class="data-table">
-                            <thead>
-                                <tr>
-                                    <th>Payment Date</th>
-                                    <th>Tax Authority</th>
-                                    <th>Amount Paid</th>
-                                    <th>Period Covered</th>
-                                    <th>Proof</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>June 5, 2025</td>
-                                    <td>LIRS</td>
-                                    <td>₦50,000</td>
-                                    <td>May 2025</td>
-                                    <td><a href="#" class="btn btn-sm btn-info"><i class="fas fa-file-alt"></i> View</a></td>
-                                    <td>
-                                        <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
-                                    </td>
-                                </tr>
+                        <div class="table-responsive">
+                            <table class="data-table">
+                                <thead>
+                                    <tr>
+                                        <th>Payment Date</th>
+                                        <th>Tax Authority</th>
+                                        <th>Amount Paid</th>
+                                        <th>Period Covered</th>
+                                        <th>Proof</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>June 5, 2025</td>
+                                        <td>LIRS</td>
+                                        <td>₦50,000</td>
+                                        <td>May 2025</td>
+                                        <td><a href="#" class="btn btn-sm btn-info"><i class="fas fa-file-alt"></i> View</a></td>
+                                        <td>
+                                            <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
+                                        </td>
+                                    </tr>
                                 </tbody>
-                        </table>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -139,4 +146,3 @@
     <script src="js/main.js"></script>
 </body>
 </html>
-                                  
